--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+apkenv (42.3.15) unstable; urgency=low
+
+  * New Support Modules.
+
+ -- Thomas Perl <m@thp.io>  Sun, 23 Dec 2012 15:16:37 +0100
+
 apkenv (42.1.1) unstable; urgency=low
 
   * Initial Release.
