--- a/README
+++ b/README
@@ -133,3 +133,14 @@ All code written by me (crowriot) for apkenv's pandora port is
 licensed under same conditions as the apkenv itself.
 
 
+Linux X11/EGL branch
+====================
+I (mittorn) modifed some files in apklib and imagelib to fix build with 
+recent zlib, libjpeg, libpng versions.
+SDL platform module forked from pandora, with fixed EGL surface
+X11 platform module supports window resize (i have made some changes in 
+support modules to enable it, but not all games support it)
+You can specify inital window size by adding two arguments before path 
+to apk:
+	apkenv <width> <height> <apkfile>
+
